fix: mainTitle bg contrast fix

--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -100,7 +100,7 @@
     }
 }
 
-  .currentInfoContainer {
+  .clock {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
